WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108448
[BlackBerry] InputHandler status is not restored when page history goes back
https://bugs.webkit.org/show_bug.cgi?id=108448
Summary
[BlackBerry] InputHandler status is not restored when page history goes back
Sean Wang
Reported
2013-01-31 02:45:40 PST
Steps to Reproduce: 1) Browser > go to
http://m.bbc.co.uk/weather
2) Type in the city name in Find a Forecast search box. 3) I typed in Warsaw and pressed Search. 4) The Forecast for that city is displayed on the next page. 5) Hit the back button/return button (looks like this <) on the bottom to take you back to the previous page. 6) When taken back to Find Forecast with the town written (warsaw), press on the text to edit the search. Expected Results: VBK comes up on the first touch of the text editable box Actual Results: VBK doesn't easily comes up, you need to press many timese to get it up, or switch windows and get it back again, this is a very popular UK site it should work flawless.
Attachments
patch
(4.71 KB, patch)
2013-01-31 02:49 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2013-01-31 02:49:15 PST
Created
attachment 185730
[details]
patch
WebKit Review Bot
Comment 2
2013-02-01 12:12:48 PST
Comment on
attachment 185730
[details]
patch Clearing flags on attachment: 185730 Committed
r141623
: <
http://trac.webkit.org/changeset/141623
>
WebKit Review Bot
Comment 3
2013-02-01 12:12:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug